# MFA-WebUI

./: .gitignore  .pre-commit-config.yaml  README.md  context7.json  maa_utils.py  main.py  models.py  nuitka-package.config.yml  pyproject.toml  scheduler_manager.py  utils.py
.github/: .copilot-commit-message-instructions.md
.github/scripts/: generate_release_notes.py
.github/workflows/: build.yml
config/: settings.json
deploy/: compile_deps.py  copy_resources.py  download_deps.py  install.yml
front/: components.d.ts  env.d.ts  eslint.config.ts  package.json  pnpm-lock.yaml  test.html  tsconfig.json  tsconfig.node.json  uno.config.js  uno.config.ts  vite.config.js  vite.config.ts
front/src/: App.vue  main.ts  theme.ts
front/src/assets/: api.js  main.css  ws.js
front/src/components/: LeftPanel.vue  MediumPanel.vue  OptionItem.vue  RightPanel.vue  SchedulerTaskDialog.vue  UpdateDialog.vue  left.vue  medium.vue  right.vue
front/src/libs/: i18n.ts
front/src/locales/: en-US.json  zh-CN.json
front/src/router/: index.js  index.ts
front/src/script/: api.ts  sse.ts  ws.ts
front/src/stores/: index.js  index.ts  interface.ts  scheduler.ts  settings.ts  userConfig.ts
front/src/types/: interface.ts  interfaceV1.ts  interfaceV2.ts  scheduler.ts  settings.ts
front/src/views/: HomeView.vue  PanelView.vue  SettingView.vue
models/: api.py  interface.py  interfaceV1.py  interfaceV2.py  scheduler.py  settings.py
scripts/: copy_resources.py
updater/: go.mod  go.sum  main.go
